Update and rename index,html to index.html

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <nav class="nav-links">
                 <a href="#professionals-section" class="nav-link">Ver planos vips</a>   
             </nav>
-            <a href="/login" class="nav-cta">Login</a>
+            <a href="https://hoff08.github.io/login-pagina/" class="nav-cta">Login</a>
         </div>
     </div>
 
@@ -439,7 +439,7 @@
             <div class="social-proof animate"><div class="profile-images"><img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Cliente 1" class="profile-image"><img src="https://images.pexels.com/photos/1043474/pexels-photo-1043474.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Cliente 2" class="profile-image"><img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Cliente 3" class="profile-image"></div><span>+500 clientes satisfeitos</span></div>
             <h1 class="main-headline animate">Seu novo estilo<br><span class="highlight-text">começa aqui</span></h1>
             <p class="sub-headline animate">Barbearia premium com os melhores profissionais da cidade. Cortes modernos, barbas perfeitas e atendimento de primeira.</p>
-            <button class="cta-button animate" id="ctaScheduleBtn" type="button" onclick="window.location.href='/login'">Agende seu horário →<div class="cta-tooltip" id="ctaTooltip">Nosso plano de assinatura vale a pena. Clique para saber mais!</div></button>
+            <button class="cta-button animate" id="ctaScheduleBtn" type="button" onclick="window.location.href='https://hoff08.github.io/login-pagina/'">Agende seu horário →<div class="cta-tooltip" id="ctaTooltip">Nosso plano de assinatura vale a pena. Clique para saber mais!</div></button>
             <div class="hero-images animate"><div class="hero-image-container"><img src="https://images.pexels.com/photos/3998427/pexels-photo-3998427.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Ambiente da barbearia"></div><div class="hero-image-container"><img src="https://images.pexels.com/photos/3992864/pexels-photo-3992864.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Barbeiro em ação"></div><div class="hero-image-container"><img src="https://images.pexels.com/photos/3160980/pexels-photo-3160980.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Corte de cabelo finalizado"></div></div>
         </div>
     </section>
@@ -483,7 +483,7 @@
         </div>
     </section>
 
-    <button id="floatingAppointmentBtn" class="floating-appointment-btn animate" onclick="window.location.href='/login'"><span class="appointment-icon">✂️</span>Agendar</button>
+    <button id="floatingAppointmentBtn" class="floating-appointment-btn animate" onclick="window.location.href='https://hoff08.github.io/login-pagina/'"><span class="appointment-icon">✂️</span>Agendar</button>
 
 
     <!-- Inclusão da Biblioteca Swiper.js (JS) -->
